--- a/ditkanik.html
+++ b/ditkanik.html
@@ -21,5 +21,8 @@
 <div class=whitediv>
 
   <h1>Dit kan ik</h1>
+  <img src=bal.gif width="150px" height="150px"/>
+  Ik voetbal bij <a href="http://www.vvsvi.nl">SVI</a> in zwolle zuid.
+
 </div>
 </body>
