Teksten ingevuld, video toegevoegd en marges aangepast.

--- a/ditkanik.html
+++ b/ditkanik.html
@@ -1,28 +1,37 @@
 <html>
-<head>
-  <title>Portfolio van Stijn</title>
-  <link rel="stylesheet" href="index.css" />
-  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+  <head>
+    <title>Portfolio site van Stijn</title>
+    <link rel="stylesheet" href="index.css" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
 
 
 
-</head>
-<body>
+  </head>
+  <body>
 
-  <nav>
-    <ul>
+    <nav>
+      <ul class="nav">
+        <li class="nav"><a href=index.html>Home</a></li>
+        <li class="nav"><a href=ditbenik.html>Dit <strong>ben</strong> ik</a></li>
+        <li class="nav"><a href=ditkanik.html>Dit <strong>kan</strong> ik</a></li>
+        <li class="nav"><a href=ditwilik.html>Dit <strong>wil</strong> ik</a></li>
+      </ul>
+    </nav>
 
-      <li><a href=index.html>Home</a></li>
-      <li><a href=ditbenik.html>Dit <strong>ben</strong> ik</a></li>
-      <li><a href=ditkanik.html>Dit <strong>kan</strong> ik</a></li>
-      <li><a href=ditwilik.html>Dit <strong>wil</strong> ik</a></li>
-    </ul>
-  </nav>
-<div class=whitediv>
+    <div class=whitediv>
+      <div class=innerdiv>
 
-  <h1>Dit kan ik</h1>
-  <img src=bal.gif width="150px" height="150px"/>
-  Ik voetbal bij <a href="http://www.vvsvi.nl">SVI</a> in zwolle zuid.
+        <h1>Dit kan ik</h1>
+        <P STYLE="font-size: 15px; font-family: Verdana, Arial, Helvetica, sans-serif;">
+        Ik zit op voetbal, Bij <a href="http://www.vvsvi.nl">SVI</a> in Zwolle-zuid. Daar zit ik in de B5 samen met mn broertje. Ik sta vaak in de verdediging omdat ik dat zelf de leukste plek vind.
+        Maar soms ga ik ook wel naar voren dat vind ik ook wel leuk. Ik vind Zeilen ook heel leuk, dat doe ik een paar weken per jaar in de zomervakantie gaan ik dan naar een kamp samen met mijn broertje en zusje.
+        Ik ben nu redelijk gevorderd in de meeste boten, en mijn favoriete boot tot nu toe is de laser pico. Dat is een snelle en lichte boot die lekker makkelijk omslaat.
+        Thuis kijk ik soms wat youtube en kijk ik veel Netflix. Ik vind de The green arrow een leuke serie en ik ben nu ook Black Sails aan het kijken.
+        Op school vind ik de vakken Gym, Wiskunde, Scheikunde en Natuurkunde leuk daar ben ik ook een stuk beter in dan in de talen of Geschiedenis. Die heb ik nu ook laten vallen, dus nu heb ik allen nog maar vakken die ik ook leuk vind en Nederlands en Engels.
+        </p>
+        </br> <img src=bal.gif width="150px" height="150px"/>
 
-</div>
-</body>
+     </div>
+    </div>
+  </body>
+</html>
