--- a/ditwilik.html
+++ b/ditwilik.html
@@ -1,25 +1,40 @@
 <html>
-<head>
-  <title>Portfolio van Stijn</title>
-  <link rel="stylesheet" href="index.css" />
-  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+  <head>
+    <title>Portfolio site van Stijn</title>
+    <link rel="stylesheet" href="index.css" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+
+  </head>
+  <body>
+
+    <nav>
+      <ul class="nav">
+        <li class="nav"><a href=index.html>Home</a></li>
+        <li class="nav"><a href=ditbenik.html>Dit <strong>ben</strong> ik</a></li>
+        <li class="nav"><a href=ditkanik.html>Dit <strong>kan</strong> ik</a></li>
+        <li class="nav"><a href=ditwilik.html>Dit <strong>wil</strong> ik</a></li>
+      </ul>
+    </nav>
+
+    <div class=whitediv>
+      <div class=innerdiv>
+      <h1>Dit wil ik</h1>
+      <P STYLE="font-size: 15px; font-family: Verdana, Arial, Helvetica, sans-serif;">
+      Na de middelbare school wil ik graag naar de <a href="https://www.tudelft.nl/">TU Delft</a> om daar werktuigbouwkunde of industrieel ontwerpen te studeren.
+      Dan moet ik eerst mn propeduise halen op het HBO en dat wil ik op het windesheim doen. Dat wil ik direct na mijn middelbare school doen,
+      ik ga denk ik niet eem tussenjaar nemen om te reizen ofzo. Voor die studies bij de TU Delft heb ik ook nog Wiskunde B en Natuurkunde op VWO niveau nodig,
+      dat ga ik tijdens mijn propeduise proberen te halen.Als ik klaar ben met die studie wil ik gaan werken voor een bedrijf en misschien later dan nog een andere studie gaan doen.
+      Het lijkt me ook leuk om later misschien zelf een bedrijfje te hebben, maar dat weet ik nu nog niet ik wil eerst gewoon zelf ergens gaan werken.
+      Ik wil later ook weer terug naar de stad, ik zou het wel leuk lijken om in Amsterdam te wonen.
+      </p>
+      <iframe width="560" height="315"
+        src="https://www.youtube-nocookie.com/embed/hapuZPAQo4Q?rel=0&amp;showinfo=0;start=5"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+        
+      </iframe>
 
 
-
-</head>
-<body>
-
-  <nav>
-    <ul>
-
-      <li><a href=index.html>Home</a></li>
-      <li><a href=ditbenik.html>Dit <strong>ben</strong> ik</a></li>
-      <li><a href=ditkanik.html>Dit <strong>kan</strong> ik</a></li>
-      <li><a href=ditwilik.html>Dit <strong>wil</strong> ik</a></li>
-    </ul>
-  </nav>
-<div class=whitediv>
-  <h1>Dit wil ik</h1>
-
-</div>
-</body>
+      </div>
+    </div>
+  </body>
+</html>
