--- a/ditbenik.html
+++ b/ditbenik.html
@@ -21,13 +21,13 @@
 
       <h1>Dit ben ik</h1>
       <P STYLE="font-size: 15px; font-family: Verdana, Arial, Helvetica, sans-serif;">
-      <strong>Ik ben Stijn Boose.</strong><br> Ik ben zestien jaar oud. Ik ben geboren in Delft. Ik woon nu in Wijthem daar zijn we vorig jaar naartoe verhuisd. Daarvoor hebben we een jaartje in Zwolle-zuid gewoond.
-       En daarvoor woonden we in wateringen, dat is een dorpje dat in de buurt van Den Haag ligt.
-       Ik heb een broertje van vijftien en een zusje van tien. Ik ging naar de mariaschool, dat is een basisschool in wateringen. Daar waren mijn favoriete vakken rekenen en gym. En mijn favoriete leraren waren Juf Tiny en Juf Bep.
-       Daarna ben ik naar de middelbare gegaan het Wateringse Veld College, Dat ging niet heel erg goed Ik was afgezakt van tweetalig gymnasium naar gewoon Atheneum en in het tweede jaar heb ik niet gehaald. Toen zijn we verhuisd naar Zwolle en ging ik naar<a href="https://heesweg.thorbecke-zwolle.nl/"> Thorbecke scholengemeenschap </a>
-       heb ik daar 2 Havo/VWO gedaan ben ik met een beetje moeite overgegaan naar 3 VWO en ben daarna naar 4 Havo gegaan, daar zit ik nu. Mijn favoriete vakken zijn Wiskunde Natuurkunde en Scheikunde Ik heb nu net Informatica en dat lijkt me tot nu toe ook wel leuk.
-       Ik luister soms naar muziek op Spotify. Ik heb niet echt een favoriete band of zanger, maar mijn favoriete genre's zijn pop, house en rap.
-       </br><img src=tsglogo.jpeg width="40%" height="10%"/>
+      <strong>Ik ben Stijn Boose.</strong><br> Ik ben zestien jaar oud. Ik ben geboren in Delft. Ik woon nu in Wijthmen, daar zijn we vorig jaar naartoe verhuisd. Daarvoor hebben we een jaartje in Zwolle-Zuid gewoond.
+       En daarvoor woonden we in Wateringen, dat is een dorpje dat in de buurt van Den Haag ligt.
+       Ik heb een broertje van vijftien en een zusje van tien. Ik ging naar de Mariaschool, dat is een basisschool in Wateringen. Daar waren mijn favoriete vakken rekenen en gym. En mijn favoriete leraren waren Juf Tiny en Juf Bep.
+       Daarna ben ik naar de middelbare gegaan op het Wateringse Veld College, dat ging niet heel erg goed. Ik was afgezakt van tweetalig gymnasium naar gewoon Atheneum en in het tweede jaar ben ik blijven zitten. Toen zijn we verhuisd naar Zwolle en ging ik naar<a href="https://heesweg.thorbecke-zwolle.nl/"> Thorbecke scholengemeenschap </a>.
+       Daar heb ik 2 Havo/VWO gedaan en ben ik met een beetje moeite overgegaan naar 3 VWO en daarna ben ik naar 4 Havo gegaan, daar zit ik nu. Mijn favoriete vakken zijn Wiskunde, Natuurkunde en Scheikunde. Ik heb nu sinds dit jaar Informatica en dat vind ik tot nu toe ook wel leuk.
+       Ik luister soms naar muziek op Spotify. Ik heb niet echt een favoriete band of zanger, maar mijn favoriete genre's zijn pop, house en rap en de top 40.
+     </br><img src=tsglogo.jpeg width="40%" height="15%"/>
 
        </p>
 
