--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <div class=whitediv>
     <div class=innerdiv>
       <h1>Dit is mijn portfolio</h1>
-      Ik ben Stijn Boose Dit is mijn eerste site die ik heb gemaakt
+      Ik ben Stijn Boose 
+    </br>Dit is mijn eerste site die ik heb gemaakt
       en dit doe ik voor het vak informatica.
      <BR />Hierin vertel ik iets over mezelf:
       <BR />
