--- a/ditkanik.html
+++ b/ditkanik.html
@@ -23,11 +23,11 @@
 
         <h1>Dit kan ik</h1>
         <P STYLE="font-size: 15px; font-family: Verdana, Arial, Helvetica, sans-serif;">
-        Ik zit op voetbal, Bij <a href="http://www.vvsvi.nl">SVI</a> in Zwolle-zuid. Daar zit ik in de B5 samen met mn broertje. Ik sta vaak in de verdediging omdat ik dat zelf de leukste plek vind.
-        Maar soms ga ik ook wel naar voren dat vind ik ook wel leuk. Ik vind Zeilen ook heel leuk, dat doe ik een paar weken per jaar in de zomervakantie gaan ik dan naar een kamp samen met mijn broertje en zusje.
+        Ik zit op voetbal, bij <a href="http://www.vvsvi.nl">SVI</a> in Zwolle-Zuid. Daar zit ik in de B5 samen met m'n broertje. Ik sta vaak in de verdediging omdat ik dat zelf de leukste plek vind.
+        Maar soms ga ik ook wel naar voren, dat vind ik ook wel leuk. Ik vind zeilen ook heel leuk, dat doe ik een paar weken per jaar. In de zomervakantie ga ik dan naar een kamp samen met mijn broertje en mijn zusje.
         Ik ben nu redelijk gevorderd in de meeste boten, en mijn favoriete boot tot nu toe is de laser pico. Dat is een snelle en lichte boot die lekker makkelijk omslaat.
-        Thuis kijk ik soms wat youtube en kijk ik veel Netflix. Ik vind de The green arrow een leuke serie en ik ben nu ook Black Sails aan het kijken.
-        Op school vind ik de vakken Gym, Wiskunde, Scheikunde en Natuurkunde leuk daar ben ik ook een stuk beter in dan in de talen of Geschiedenis. Die heb ik nu ook laten vallen, dus nu heb ik allen nog maar vakken die ik ook leuk vind en Nederlands en Engels.
+        Thuis kijk ik soms wat Youtube en kijk ik veel Netflix. Ik vind The green arrow een leuke serie en ik ben nu ook Black Sails aan het kijken.
+        Op school vind ik de vakken gym, wiskunde, scheikunde en natuurkunde leuk, daar ben ik ook een stuk beter in dan in de talen of geschiedenis. Die vakken heb ik nu ook laten vallen, dus nu heb ik alleen nog maar vakken die ik ook leuk vind en Nederlands en Engels.
         </p>
         </br> <img src=bal.gif width="150px" height="150px"/>
 
