--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         <li>Wat ik doe in mijn vrije tijd</li>
         <li>en Wat ik later wil.</li>
       </ol>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    <img src=portfolio.png width="40%" height="35%"/>
     </div>
   </div>
 
