--- a/ditkanik.html
+++ b/ditkanik.html
@@ -24,10 +24,10 @@
         <h1>Dit kan ik</h1>
         <P STYLE="font-size: 15px; font-family: Verdana, Arial, Helvetica, sans-serif;">
         Ik zit op voetbal, bij <a href="http://www.vvsvi.nl">SVI</a> in Zwolle-Zuid. Daar zit ik in de B5 samen met m'n broertje. Ik sta vaak in de verdediging omdat ik dat zelf de leukste plek vind.
-        Maar soms ga ik ook wel naar voren, dat vind ik ook wel leuk. Ik vind zeilen ook heel leuk, dat doe ik een paar weken per jaar. In de zomervakantie ga ik dan naar een kamp samen met mijn broertje en mijn zusje.
-        Ik ben nu redelijk gevorderd in de meeste boten, en mijn favoriete boot tot nu toe is de laser pico. Dat is een snelle en lichte boot die lekker makkelijk omslaat.
-        Thuis kijk ik soms wat Youtube en kijk ik veel Netflix. Ik vind The green arrow een leuke serie en ik ben nu ook Black Sails aan het kijken.
-        Op school vind ik de vakken gym, wiskunde, scheikunde en natuurkunde leuk, daar ben ik ook een stuk beter in dan in de talen of geschiedenis. Die vakken heb ik nu ook laten vallen, dus nu heb ik alleen nog maar vakken die ik ook leuk vind en Nederlands en Engels.
+        Maar soms ga ik ook wel naar voren, dat vind ik ook wel leuk. Ik vind zeilen ook heel leuk, dat doe ik een paar weken per jaar. In de zomervakantie ga ik dan naar een kamp samen met mijn broertje en mijn zusje. Dat doen we bij zeilschool It-Beaken in Heeg, dat ligt in Friesland aan een redelijk groot meer.
+        Ik ben nu redelijk gevorderd in de meeste boten, en mijn favoriete boot tot nu toe is de laser pico. Dat is een snelle en lichte boot die lekker makkelijk omslaat. Ik ben nu ook gevraagd om daar instructeur te worden, dit dijkt me ook wel erg leuk dus dat wil ik ook gaan doen.
+        Thuis kijk ik soms wat Youtube en kijk ik veel Netflix. Ik vind The green arrow een leuke serie en ik ben nu ook shooter aan het kijken.
+        Op school vind ik de vakken gym, wiskunde, scheikunde en natuurkunde leuk, daar ben ik ook een stuk beter in dan in de talen of geschiedenis. Die vakken heb ik nu ook laten vallen, dus nu heb ik alleen nog maar vakken die ik ook leuk vind en nederlands en engels.
         </p>
         </br> <img src=bal.gif width="150px" height="150px"/>
 
