--- a/ditwilik.html
+++ b/ditwilik.html
@@ -20,19 +20,19 @@
       <div class=innerdiv>
       <h1>Dit wil ik</h1>
       <P STYLE="font-size: 15px; font-family: Verdana, Arial, Helvetica, sans-serif;">
-      Na de middelbare school wil ik graag naar de <a href="https://www.tudelft.nl/">TU Delft</a> om daar werktuigbouwkunde of industrieel ontwerpen te studeren.
+      Na de middelbare school wil ik graag naar de <a href="https://www.tudelft.nl/">TU Delft</a> om daar werktuigbouwkunde, bouwkunde of industrieel ontwerpen te studeren. Ik weet nu nog niet precies welke maar deze lijken me het leukste.
+      Ik zou graag naar de TU Delft willen gaan omdat ze daar de opleidingen geven die mij ook echt leuk lijken, en omdat ze ook vaak aan van die internationale wedstrijden meedoen wat me ook erg leuk lijkt.
       Dan moet ik eerst mn propaedeuse halen op het HBO en dat wil ik op het windesheim doen. Dat wil ik direct na mijn middelbare school doen,
-      ik ga denk ik niet eem tussenjaar nemen om te reizen ofzo. Voor die studies bij de TU Delft heb ik ook nog Wiskunde B en Natuurkunde op VWO niveau nodig,
+      ik ga denk ik niet een tussenjaar nemen om te reizen ofzo. Voor die studies bij de TU Delft heb ik ook nog Wiskunde B en Natuurkunde op VWO niveau nodig,
       dat ga ik tijdens mijn propaedeuse proberen te halen. Als ik klaar ben met die studie wil ik gaan werken voor een bedrijf en misschien later dan nog een andere studie gaan doen.
-      Het lijkt me ook leuk om later misschien zelf een bedrijfje te hebben, maar dat weet ik nu nog niet ik wil eerst gewoon zelf ergens gaan werken.
+      Het lijkt me ook leuk om later misschien zelf een bedrijfje te hebben, maar dat weet ik nu nog niet ik wil eerst gewoon zelf ergens voor iemand gaan werken.
       Ik wil later ook weer terug naar het westen, ik zou het wel leuk vinden om in Amsterdam te wonen.
       </p>
-      <iframe width="560" height="315"
-        src="https://www.youtube-nocookie.com/embed/hapuZPAQo4Q?rel=0&amp;showinfo=0;start=5"
+
+        <iframe width="592" height="333"
+        src="https://www.youtube.com/embed/JJcVw2zn6FY?rel=0&amp;controls=0&amp;showinfo=0"
         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-
-      </iframe>
-
+        </iframe>
 
       </div>
     </div>
